Updated 'site/collections/_projects/2021-01-09-the-rocks.md' via CloudCannon

--- a/site/collections/_projects/2021-01-09-the-rocks.md
+++ b/site/collections/_projects/2021-01-09-the-rocks.md
@@ -4,3 +4,8 @@ title: Angel_Lanking
 subtitle: 2023 Google Solution Challenge
 image: /uploads/천사랭킹-로고-1.png
 ---
+"Angel Ranking" responsible for the growth of the donation market
+
+Angel Ranking is a platform that matches users with appropriate donation organizations based on their donation characteristics. It assists users in registering and managing their donation history, and provides a matching service for donation organizations based on data analyzed by the "Angel Ranking AI." It provides information on donation organizations at a glance, and helps users make donations more easily by finding the most suitable organization for them through sophisticated AI analysis.
+
+Based on gamification, Angel Ranking conducts point-based competitions between organizations such as universities and companies, and provides rewards based on the results. Its goal is to use the competitive nature of people to promote donations and grow the donation market in Korea.
